# ft_linear_regression

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/plot/: main.rs
src/precision/: main.rs
src/predict/: main.rs
src/train/: main.rs
